<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20px"
        android:scrollbars="vertical">
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="0px">
                    <TextView
                        android:id="@+id/decompte"
                        android:gravity="center"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textColor="#888888"
                        android:textSize="45sp"
                        android:textStyle="bold"
                        android:typeface="serif"
                        android:text="00:00'00&quot;00" />
            </LinearLayout>
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10px">
                    <Button
                        android:id="@+id/demarrer"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:width="120px"
                        android:layout_weight="1"
                        android:text="@string/demarrer" />
                    <Button
                        android:id="@+id/memoriser"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:width="120px"
                        android:layout_weight="1"
                        android:text="@string/memoriser" />
            </LinearLayout>
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10px">
                    <Button
                        android:id="@+id/reinitialiser"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:width="120px"
                        android:layout_weight="1"
                        android:text="@string/reinitialiser" />
                    <Button
                        android:id="@+id/vider"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:width="120px"
                        android:layout_weight="1"
                        android:enabled="false"
                        android:text="@string/vider"/>
            </LinearLayout>
            <ScrollView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/liste"
                android:layout_width="160px"
                android:layout_height="110px"
                android:scrollbars="vertical">
                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/cont_liste"
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center"/>
            </ScrollView>
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10px">
                    <Button
                        android:id="@+id/quitter"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:width="120px"
                        android:layout_weight="1"
                        android:text="@string/quitter" />
            </LinearLayout>
    </LinearLayout>
</ScrollView>
